[package]
name = "tcp_multi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
atomic-time = "0.1.5"
hickory-proto = "0.25.2"
libc = "0.2.180"
socket2 = { version = "0.6.2", features = ["all"] }
thiserror = "1.0.61"
tokio = { version = "1.49.0", features = ["full"] }
tokio-test = "0.4.5"
tokio-util = { version = "0.7.18", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { features = ["env-filter", "json"], version = "0.3" }
tracing-futures = "0.2.5"

[features]
default = ["locking"]
locking = []
